# iplinux-dpkg-cross

./: ChangeLog  Makefile  README.cvs  buildcross  cross-compile.example  cross-compile.sample  cross-compile.sgml  cross-config.alpha  cross-config.amd64  cross-config.arm  cross-config.armeb  cross-config.armel  cross-config.common  cross-config.cygwin-i386  cross-config.gnu  cross-config.hppa  cross-config.i386  cross-config.linux  cross-config.m32r  cross-config.m68k  cross-config.mips  cross-config.mipsel  cross-config.powerpc  cross-config.ppc64  cross-config.sh  cross-config.sh3  cross-config.sh3eb  cross-config.sh4  cross-config.sh4a  cross-config.sh4eb  cross-config.uclibc-arm  cross-config.uclibc-mips  cross-config.uclibc-mipsel  cross-config.uclibc-powerpc  cross-config.uclibc-sh4a  crosstools  dpkg-buildpackage  dpkg-checkbuilddeps  dpkg-cross  dpkg-cross.pl  (+7 more)
Debian/: DpkgCross.pm
autoconf/: Makefile.am  autogen.sh  configure.ac
config/: cross-config.alpha  cross-config.amd64  cross-config.arm  cross-config.armeb  cross-config.cygwin-i386  cross-config.hppa  cross-config.i386  cross-config.m32r  cross-config.m68k  cross-config.mips  cross-config.powerpc  cross-config.sh
debian/: NEWS  NEWS.Debian  README.debian  bugscript  changelog  control  copyright  dpkg-cross.config  dpkg-cross.install  dpkg-cross.templates  libdebian-dpkgcross-perl.install  lintian  postinst  postrm  preinst  prerm  rules
debian/po/: POTFILES.in  cs.po  de.po  fr.po  it.po  ja.po  ka.po  nl.po  pt.po  ru.po  sv.po  uk.po
